remove html path

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ var RMP_AJAX_LOCALS = {"ajaxUrl":"https:\/\/dina-ins.co.il\/wp-admin\/admin-ajax
 				<div class="elementor-element elementor-element-4c598f4 elementor-mobile-align-right elementor-invisible elementor-widget elementor-widget-button" data-id="4c598f4" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;flash&quot;,&quot;_animation_delay&quot;:1000}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://dina-ins.co.il/#contact" class="elementor-button-link elementor-button elementor-size-sm elementor-animation-grow" role="button">
+			<a href="/#contact" class="elementor-button-link elementor-button elementor-size-sm elementor-animation-grow" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">אני רוצה לדעת עוד &gt;&gt;&gt; </span>
 		</span>
